Fixed color gap between tab and content in recipe book.

--- a/app/assets/stylesheets/pages/_recipe_book.scss
+++ b/app/assets/stylesheets/pages/_recipe_book.scss
@@ -44,3 +44,11 @@
   font-size: 30px;
   font-weight: bold;
 }
+
+#my-recipes-section {
+  margin-top: 0px;
+}
+
+#favorite-recipes-section {
+  margin-top: 0px;
+}
